# attention

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  README.zh-CN.md  ROADMAP.md  SUPPORT.md  app.py  config.example.json  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  docs-improvement.md  feature-request.yml  use-case-submission.yml
attention/: __init__.py  api.py  cli.py  config.py  core.py  errors.py  grid_render.py  mcp_server.py  pipeline.py  schemas.py
attention/format/: __init__.py  base.py  douyin.py  generic.py  weibo.py  xiaohongshu.py
attention/providers/: __init__.py  base.py  gemini.py  openai_compat.py
attention/scraper/: __init__.py  xhs.py
attention/steps/: __init__.py  analyze.py  arrange.py  base.py  generate.py  ingest.py  research.py  select.py
context/: context.example.json
docs/: for-developers.md  for-individuals.md  http-api.md  index.html  integration.md  mcp.md  skill.md
examples/: attention_sample.json  attention_sample.md
examples/requests/: analyze_base64.template.json  analyze_path.json  generate_copy.json
examples/use-cases/: README.md  accessories-detail.md  cafe-detail.md  fashion-lookbook.md
extensions/chrome/: README.md  manifest.json  popup.html  popup.js
modules/: __init__.py  base.py  context_loader.py  copywriter.py  photo_tagger.py
plans/: architecture-upgrade-v2.md  architecture-v2-revised.md  grid-engine-design.md
scripts/: encode_image.py  http_demo.py
tests/: test_interfaces.py
(+2 files in other folders)
